2010-11-15  Yi Shen  <yi.4.shen@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] ZoomTextOnly doesn't work
        https://bugs.webkit.org/show_bug.cgi?id=49568

        Check QWebSettings::ZoomTextOnly attribute before applying zoom

        * Api/qwebframe.cpp:
        (QWebFrame::textSizeMultiplier):
        (QWebFrame::setZoomFactor):
        (QWebFrame::zoomFactor):
        * Api/qwebframe_p.h:
        (QWebFramePrivate::QWebFramePrivate):

2010-11-14  Andreas Kling  <kling@webkit.org>

        Reviewed by Antonio Gomes.

        REGRESSION(r71895): API test javaScriptWindowObjectCleared fails
        https://bugs.webkit.org/show_bug.cgi?id=49466

        As of r71895 empty inline scripts are no longer executed and so
        the javaScriptWindowObjectCleared() signal is no longer triggered
        by <script></script>.

        * tests/qwebframe/tst_qwebframe.cpp:

2010-11-12  Jacob Dinu  <dinu.jacob@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] Update .def file for Symbian
        https://bugs.webkit.org/show_bug.cgi?id=49456

        Added missing symbols from revisions r69825, r70470, r71806

        * symbian/eabi/QtWebKitu.def:

2010-11-12  Benjamin Poulain  <benjamin.poulain@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] Need to implement WebKit::pluginWillHandleLoadError for WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=48764

        Add the missing error.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::pluginWillHandleLoadError):

2010-11-11  Yi Shen  <yi.4.shen@nokia.com>

        Reviewed by Andreas Kling.

        [Qt] QWebScriptWorld::world() may crash
        https://bugs.webkit.org/show_bug.cgi?id=49342

        * Api/qwebscriptworld.cpp:
        (QWebScriptWorld::world):

2010-11-11  Kenneth Rohde Christiansen  <kenneth@webkit.org>

        Reviewed by Andreas Kling.

        [Qt] Add an API for overriding the actual visible content rect in WebCore